# SearchingAlgorithms_v2

./: .gitignore  CMakeLists.txt  CMakeLists_template.txt  main.cpp
algorithms/: AStar.h  AStarPE.h  Dijkstra.h  FocalSearch.h  PFS_PE.h  PFS_VDMPE.h  ProbabilisticFocalSearch.h  SearchingAlgorithm.h  VDM_PE.h
algorithms/base/: SearchingAlgorithm.h  StateInfo.h
algorithms/problems/: NSqPuzzle.h  Pancake.h  SSSP_2DPlane.h  TSP.h
base/: algorithm.h  exceptions.h
exec/: NSqPuzzle.cpp  Pancake.cpp  SSSP_2DPlane.cpp  TSP.cpp
experiments/: process.py  run.py  run_separately.py  script.sh
experiments/NSqPuzzle/: process.py  run.py  run_separately.py  stat_100.csv
experiments/Pancake/: run.py  run_separately.py
experiments/TSP/: run.py  supplement_inputs  supplement_run.py
statements/: Problem.h
statements/NSqPuzzle/: Board.h  DataCreation.cpp  Problem.h  heuristics.h
statements/Pancake/: DataCreation.cpp  Perm.h  Problem.h  heuristics.h
statements/SSSP_2DPlane/: DataCreation.cpp  Node.h  Point.h  Problem.h
statements/TSP/: DataCreation.cpp  Geometry.h  Perm.h  Problem.h  heuristic.h  test.h
testing/statements/NSqPuzzle/: testing.cpp
testing/statements/Pancake/: testing.cpp
testing/statements/TSP/: testing.cpp
testlib/: testlib.h
